# OpenCV_Notes

./: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp  note2.md  readme.MD
